--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,13 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+API_SECRET=123123123
+VITE_PORT=3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
+APP_TIMEZONE=Europe/Kyiv
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
