--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "nuxt": "^3.19.3",
         "vue": "^3.5.22",
         "vue-router": "^4.6.3"
+    },
+    "dependencies": {
+        "@nuxt/ui": "^3.3.7"
     }
 }
