--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "postinstall": "nuxt prepare"
     },
     "devDependencies": {
+        "dayjs-nuxt": "^2.1.11",
         "nuxt": "^3.19.3",
         "vue": "^3.5.22",
         "vue-router": "^4.6.3"
